--- a/css/general.css
+++ b/css/general.css
@@ -183,15 +183,18 @@ footer {
 }
 
 .post-list-img {
-    max-width: 80vw;
-    object-fit: contain;
+    /* Setting default img size without media queries &
+    not dependent on view port width. */
+    min-width: 350px;
+    max-width: 600px;
     padding-right: 2rem;
-    @media (min-width: 430px) and (max-width: 1252px) {
-        max-width: 40vw;
-    }
-    @media (min-width: 1252px) {
-        max-width: 30vw;
-    }
+    object-fit: contain;
+    /*@media (min-width: 430px) and (max-width: 1252px) {*/
+    /*    max-width: 40vw;*/
+    /*}*/
+    /*@media (min-width: 1252px) {*/
+    /*    max-width: 30vw;*/
+    /*}*/
 }
 
 .post-list-item-title {
